--- a/aecid-testsuite/unit/data/configfiles/template_config.yml
+++ b/aecid-testsuite/unit/data/configfiles/template_config.yml
@@ -32,7 +32,7 @@ Analysis:
 
         - type: NewMatchPathValueComboDetector
           paths: ["/model/accesslog/request","/model/accesslog/method"]
-          auto_include_flag: True
+          learn_mode: True
           persistence_id: 'accesslog_request' # optional default: Default
           output_logline: False # optional default: True
           allow_missing_values: False # optional default: False
