--- a/source/root/etc/aminer/template_config.yml
+++ b/source/root/etc/aminer/template_config.yml
@@ -1,11 +1,6 @@
-#########################################################
-#
-#
-# Please note that the yaml-config is experimental and
-# incomplete at the moment. 
-#
-#
-#########################################################
+# This is a template for the "aminer" logdata-anomaly-miner tool. Copy
+# it to "config.yml" and define your ruleset. For more examples of component
+# usage see aecid-testsuite/demo/AMiner/demo-config.yml.
 
 #LearnMode: false # optional
 AMinerUser: 'aminer'  # optional default: aminer
