--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ before_install:
 install:
   - sudo apt-get update -y
   - sudo apt-get install -y ansible
+  - sudo find /usr/local -name cerberus
   - sudo ansible-playbook playbook.yml
   - sudo apt-get install -y exim4 procps cpulimit mailutils
   - sudo pip3 install coverage
