--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ before_install:
 install:
   - sudo apt-get update -y
   - sudo apt-get install -y ansible
+  - sudo apt install -y python3-pkg-resources
+  - sudo find /usr/local -name cerberus -print
   - sudo ansible-playbook playbook.yml
   - sudo apt-get install -y exim4 procps cpulimit mailutils
   - sudo pip3 install coverage
@@ -23,7 +25,6 @@ install:
   - sudo chmod +x runCoverageTests.sh
 
 script:
-  - sudo find /usr/local -name cerberus -print
   - ./runUnittests.sh
   - ./runAMinerDemo.sh demo/AMiner/demo-config.py
   - ./runAMinerDemo.sh demo/AMiner/jsonConverterHandler-demo-config.py
