--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
 install:
   - sudo apt-get update -y
   - sudo apt-get install -y ansible
-  - sudo ansible-playbook -e "aminer_pkgrespath=/usr/lib/python3.6/site-packages" playbook.yml
+  - sudo ansible-playbook -e "aminer_pkgrespath=/usr/lib/python3.6/site-packages aminer_pippath=/usr/lib/python3.6/site-packages" playbook.yml
   - sudo echo "hello2"
   - sudo apt-get install -y exim4 procps cpulimit mailutils
   - sudo pip3 install coverage
