--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 dist: bionic
 
 before_install:
-  - git clone --depth 1 --branch development https://github.com/ait-aecid/aminer-ansible.git roles/aminer
+  - git clone --depth 1 --branch v2.1.0-2 https://github.com/ait-aecid/aminer-ansible.git roles/aminer
   - cp $PWD/source/root/etc/aminer/conf-available/generic/ApacheAccessModel.py $PWD/source/root/etc/aminer/conf-enabled/ApacheAccessModel.py
   - ln -s $PWD/source/root/usr/lib/logdata-anomaly-miner/aminer $PWD/aecid-testsuite/aminer
   - ln -s $PWD/source/root/etc/aminer/template_config.py $PWD/aecid-testsuite/demo/AMiner/template_config.py
@@ -12,7 +12,6 @@ install:
   - sudo apt-get update -y
   - sudo apt-get install -y ansible
   - sudo ansible-playbook -e "aminer_pkgrespath=/usr/lib/python3.6/site-packages aminer_pippath=/usr/lib/python3.6/site-packages" playbook.yml
-  - sudo echo "hello2"
   - sudo apt-get install -y exim4 procps cpulimit mailutils
   - sudo pip3 install coverage
   - cd aecid-testsuite
