--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,8 @@ install:
   - sudo chmod +x runCoverageTests.sh
 
 script:
+  - sudo netstat -tulpn | grep LISTEN
+  - netstat -lntp | grep 25
   - ./runUnittests.sh
   - ./runAMinerDemo.sh demo/AMiner/demo-config.py
   - ./runAMinerDemo.sh demo/AMiner/jsonConverterHandler-demo-config.py
