--- a/.travis.yml
+++ b/.travis.yml
@@ -25,8 +25,12 @@ script:
   - sudo ls -la /usr/sbin/sendmail
   - sudo netstat -tulpn | grep LISTEN
   - netstat -lntp | grep 25
+  - sudo ls -la /var/mail
+  - sudo ls -la /var/spool/
+  - sudo ls -la /var/spool/mail
   - echo "test" | sudo sendmail mail@localhost
   - sudo ls -la /var/mail
+  - sudo ls -la /var/spool/
   - sudo ls -la /var/spool/mail
   - sudo touch /var/mail/mail
   - sudo chown mail:mail /var/mail/mail
