--- a/.travis.yml
+++ b/.travis.yml
@@ -22,14 +22,13 @@ install:
   - sudo chmod +x runCoverageTests.sh
 
 script:
-  - sudo cat /etc/hosts
   - sudo touch /var/mail/mail
   - sudo chown mail:mail /var/mail/mail
   - sudo ls -la /var/mail
   - sudo chown mail:mail /var/mail
   - echo "test" | sudo sendmail mail@localhost
-  - sudo python3 -c """import smtplib; smtp_obj = smtplib.SMTP('localhost', port=25, local_hostname='mail', timeout=5); print(smtp_obj); smtp_obj.close()"""
-  - sudo python3 -c """import smtplib; smtp_obj = smtplib.SMTP('localhost', port=25, timeout=5); print(smtp_obj); smtp_obj.close()"""
+  - sudo python3 -c """import smtplib; smtp_obj = smtplib.SMTP('127.0.0.1', port=25, local_hostname='mail', timeout=5); print(smtp_obj); smtp_obj.close()"""
+  - sudo python3 -c """import smtplib; smtp_obj = smtplib.SMTP('127.0.0.1', port=25, timeout=5); print(smtp_obj); smtp_obj.close()"""
   - sudo python3 -c """import smtplib; smtp_obj = smtplib.SMTP(timeout=5); smtp_obj.connect(); print(smtp_obj); smtp_obj.close()"""
   - sudo python3 -c """import socket; print(socket.getfqdn()); print(socket.gethostbyname(socket.gethostname())); import smtplib; soc = smtplib.SMTP(timeout=5); soc.connect(); print(soc); soc.close()"""
   - sudo ls -la /var/mail
