--- a/.travis.yml
+++ b/.travis.yml
@@ -22,12 +22,14 @@ install:
   - sudo chmod +x runCoverageTests.sh
 
 script:
+  - printenv
+  - export SMTP_SERVER=localhost
   - sudo touch /var/mail/mail
   - sudo chown mail:mail /var/mail/mail
   - sudo ls -la /var/mail
   - sudo chown mail:mail /var/mail
   - echo "test" | sudo sendmail mail@localhost
-  - sudo python3 -c """import smtplib; smtplib.debuglevel = 1; smtp_obj = smtplib.SMTP('127.0.0.1', port=25, local_hostname='mail', timeout=5); print(smtp_obj); smtp_obj.close()"""
+  - sudo python3 -c """import smtplib; smtplib.debuglevel = 1; smtp_obj = smtplib.SMTP('127.0.0.1', port=25, local_hostname='root', timeout=5); print(smtp_obj); smtp_obj.close()"""
   - sudo python3 -c """import smtplib; smtplib.debuglevel = 1; smtp_obj = smtplib.SMTP('127.0.0.1', port=25, timeout=5); print(smtp_obj); smtp_obj.close()"""
   - sudo python3 -c """import smtplib; smtplib.debuglevel = 1; smtp_obj = smtplib.SMTP(timeout=5); smtp_obj.connect(); print(smtp_obj); smtp_obj.close()"""
   - sudo python3 -c """import socket; print(socket.getfqdn()); print(socket.gethostbyname(socket.gethostname())); import smtplib; smtplib.debuglevel = 1; soc = smtplib.SMTP(timeout=5); soc.connect(); print(soc); soc.close()"""
