--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,13 @@ install:
   - sudo chmod +x runCoverageTests.sh
 
 script:
+  - sudo service exim4 restart
+  - sudo netstat -a | grep smtp
+  - sudo netstat -nlp | grep :25
+  - echo dc_local_interfaces='127.0.0.1' >> /etc/exim4/update-exim4.conf.conf
+  - sudo service exim4 restart
+  - sudo netstat -a | grep smtp
+  - sudo netstat -nlp | grep :25
   - sudo exim -bt mail@localhost
   - sudo lsof -i -P | grep exim
   - sudo touch /var/mail/mail
