--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ install:
   - sudo chmod +x runCoverageTests.sh
 
 script:
+  - sudo iptables -L
   - sudo netstat -a | grep smtp
   - sudo netstat -nlp | grep :25
   - sudo exim -bt mail@localhost
@@ -38,7 +39,7 @@ script:
   - sudo python3 -c """import smtplib; smtp_obj = smtplib.SMTP('127.0.0.1', port=25, local_hostname='localhost', timeout=10); print(smtp_obj); smtp_obj.quit()"""
   - sudo python3 -c """import smtplib; smtp_obj = smtplib.SMTP('127.0.0.1', port=25, timeout=10); print(smtp_obj); smtp_obj.quit()"""
   - sudo python3 -c """import smtplib; smtp_obj = smtplib.SMTP(timeout=10); smtp_obj.connect(); print(smtp_obj); smtp_obj.quit()"""
-  - sudo python3 -c """import socket; print(socket.getfqdn()); print(socket.gethostbyname(socket.gethostname())); import smtplib; soc = smtplib.SMTP(timeout=5); soc.debuglevel = 3; s = soc._get_socket('127.0.0.1', 25, 5); print(s); s.close(); print(socket.create_connection(('127.0.0.1', 25), 5)); soc.connect(host='localhost', port=25); print(soc); soc.quit()"""
+  - sudo python3 -c """import socket; print(socket.getfqdn()); print(socket.gethostbyname(socket.gethostname())); import smtplib; soc = smtplib.SMTP(timeout=5); soc.debuglevel = 3; s = soc._get_socket('127.0.0.1', 25, 5); print(s); s.close(); print(socket.getaddrinfo('127.0.0.1', 25, 0, 1)); print(socket.create_connection(('127.0.0.1', 25), 5)); soc.connect(host='localhost', port=25); print(soc); soc.quit()"""
   - sudo ls -la /var/mail
   - echo d | sudo mail -u mail
   - sudo python3 -m unittest unit/events/DefaultMailNotificationEventHandlerTest.py
