--- a/.travis.yml
+++ b/.travis.yml
@@ -35,8 +35,8 @@ script:
   - echo "test" | sudo sendmail mail@localhost
   - sudo pip3 install psutil
   - sudo python3 -c """import psutil; print(psutil.net_connections())"""
-  - sudo python3 -c """import socket; a_socket = socket.socket(socket.AF_INET, socket.SOCK_STREAM); location = ('127.0.0.1', 25); result_of_check = a_socket.connect_ex(location); print(result_of_check); a_socket.close()"""
-  - sudo python3 -c """import socket; a_socket = socket.socket(socket.AF_INET, socket.SOCK_STREAM); location = ('127.0.0.1', 25); result_of_check = a_socket.connect(location); print(result_of_check); a_socket.close()"""
+  - python3 -c """import socket; a_socket = socket.socket(socket.AF_INET, socket.SOCK_STREAM); location = ('127.0.0.1', 25); result_of_check = a_socket.connect_ex(location); print(result_of_check); a_socket.close()"""
+  - python3 -c """import socket; a_socket = socket.socket(socket.AF_INET, socket.SOCK_STREAM); location = ('127.0.0.1', 25); result_of_check = a_socket.connect(location); print(result_of_check); a_socket.close()"""
   - sudo python3 -c """import smtplib; smtp_obj = smtplib.SMTP('localhost', timeout=10); print(smtp_obj); smtp_obj.quit()"""
   - python3 -c """import smtplib; smtp_obj = smtplib.SMTP('localhost', timeout=10); print(smtp_obj); smtp_obj.quit()"""
   - sudo python3 -c """import smtplib; smtp_obj = smtplib.SMTP('127.0.0.1', port=25, local_hostname='localhost', timeout=10); print(smtp_obj); smtp_obj.quit()"""
